toolchain/internal/core/analysis/testdata/errors/duplicates/enum_const_same_name.vdl
// format:off
// @expect: E804

enum Limit {
  Low
}

const limit = 10
